# ROAM

./: .gitmodules  LICENSE.BSD  README.md
ROAM-Mapping/: CMakeLists.txt  README.md  package.xml
ROAM-Mapping/include/octomap_multi/: compute_coverage.h  compute_entropy.h  compute_phi.h  octomap_generator.h  octomap_generator_base.h  octomap_generator_ros.h  octomap_generator_semantic_ros.h
ROAM-Mapping/launch/: compute_phi.launch  octomap_multi.launch  semantic_octomap_multi.launch
ROAM-Mapping/msg/: Named_float.msg  Octomap_multi.msg
ROAM-Mapping/params/: multi_robot_semantic_mapping_params.yaml  octomap_generator.yaml
ROAM-Mapping/src/: compute_coverage.cpp  compute_entropy.cpp  compute_phi.cpp  octomap_generator.cpp  octomap_generator_ros.cpp  octomap_generator_semantic_ros.cpp
ROAM-Planning/: CMakeLists.txt  README.md  package.xml  setup.py
ROAM-Planning/launch/: depth_to_pointcloud.launch  planning_multi.launch
ROAM-Planning/params/: multi_robot_exploration_params.yaml  point_cloud.yaml
ROAM-Planning/src/cpp/inc/: safe_array.h
ROAM-Planning/src/exploration/: ga_multi_exploration_node.py
ROAM-Planning/src/footprints/: collision_cpp.py  footprint_points.py  footprints.py
ROAM-Planning/src/mapping/: costmap.py
ROAM-Planning/src/navigation/: simple_path_navigation_node.py
ROAM-Planning/src/planners/: astar_cpp.py
ROAM-Planning/src/sensors/: depth_sensor.py  depth_to_point_cloud.py
ROAM-Planning/src/utilities/: compute_path_phi_node.py  draw_path_timelapse.py  frontier_utils.py  sensor_utils.py
docs/: index.html
docs/webpage/: index.html
