<package format="3">
  <name>roam_mapping</name>
  <version>1.0.0</version>
  <description>
    ROS interface to perform distributed semantic OctoMap estimation.
  </description>
  <author>Arash Asgharivaskasi</author>
  <maintainer email="aasghari@ucsd.edu">Arash Asgharivaskasi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>semantic_octomap</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>octomap_msgs</exec_depend>
  <exec_depend>octomap</exec_depend>
  <exec_depend>semantic_octomap</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
