<?xml version="1.0"?>
<package>
  <name>roam_planning</name>
  <version>1.0.0</version>
  <description>ROS interface to perform distributed planning for exploration.</description>

  <author>Arash Asgharivaskasi</author>
  <maintainer email="aasghari@ucsd.edu">Arash Asgharivaskasi</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>python-numpy</build_depend>
  <build_depend>python-opencv</build_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>python-numpy</run_depend>
  <run_depend>python-opencv</run_depend>
  
</package>
